# zero2prod-exercises

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  spec.yaml  spec.yml  sqlx-data.json
.github/workflows/: audit.yml  general.yml
.sqlx/: query-25e78ec9017ba4ea77de21082da394c62cf0d1b0988aa4f4a71dd0f3d8e024f2.json  query-7abbca77c75920fe086255e2fbc86f293dfe8393f71b7047dd222d034b7a203a.json
configuration/: base.yaml  base.yml  production.yaml
migrations/: 20211104134542_create_subscriptions_table.sql  20211106163825_add_status_to_subscriptions.sql  20211106164604_make_status_not_null_in_subscriptions.sql  20211106164850_create_subscription_tokens_table.sql  20211107190107_create_users_table.sql  20211107191946_rename_password_column.sql  20211107194614_add_salt_to_users.sql  20211107195802_remove_salt_from_users.sql  20240112200353_create_subscriptions_table.sql  20240207205658_create_users_table.sql  20240209213656_seed_user.sql  20240210203141_create_idempotency_table.sql  20240210214302_create_newsletter_issues_table.sql  20240210214635_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
