[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# not required, but good practice to put it here
[[bin]] # double [] signifies an array, as there can be multiple binaries in a project
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.10"
actix-http = "=3.0.0-beta.11"
serde = { version = "1", features = ["derive"] }

# table-like toml syntax to avoid a super-long line
[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
