[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# not required, but good practice to put it here
[[bin]] # double [] signifies an array, as there can be multiple binaries in a project
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.10"
actix-http = "=3.0.0-beta.11"
serde = { version = "1", features = ["derive"] }
config = "0.11.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.12"
serde-aux = "3.0.1"
log = "0.4"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2.2"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"

# table-like toml syntax to avoid a super-long line
[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
once_cell = "1.8.0"
tokio = { version = "1", features = ["rt", "macros"] }
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.5.0"
