[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-lab = "0.20"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
argon2 = { version = "0.5", features = ["std"] }
anyhow = "1"
base64 = "0.21"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
config = "0.14.0"
htmlescape = "0.3"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
claims = "0.7"
fake = "2.9"
linkify = "0.10"
once_cell = "1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"